objects/AIA_Vendor__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>Vendors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ID_Card__c</fullName>
        <label>ID Card</label>
        <referenceTo>ID_Card__c</referenceTo>
        <relationshipLabel>Vendors</relationshipLabel>
        <relationshipName>Vendors</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Medical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pharmacy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pharmacy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Vision</label>
        <type>Checkbox</type>
    </fields>
    <label>Vendor</label>
    <nameField>
        <displayFormat>V-{0000}</displayFormat>
        <label>Vendor Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>